processed/gerrit/txt/49043.txt
Change:     49043
Subject:    LU-16291 build: make kobj_type constant
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/49043
Change-Id:  I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2022-11-04 06:35:58.000000000
Updated:    2022-12-13 16:07:40.000000000
Patch Set:  3
Insertions: +3
Deletions:  -3
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Shaun Tancheff: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Jian Yu, Shaun Tancheff

--- Commit Message ---
LU-16291 build: make kobj_type constant

Kernel v5.16-rc2-28-gee6d3dd4ed48:
commit ee6d3dd4ed48ab24b74bab3c3977b8218518247d
driver core: make kobj_type constant.

This patch makes struct kobj_type constant to fix
the following build failure against kernel 5.16:

lustre/obdclass/obd_config.c: In function 'class_modify_config':
lustre/obdclass/obd_config.c:1639:13: error: assignment discards
'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
1639 |         typ = get_ktype(kobj);
     |             ^

Signed-off-by: Jian Yu <yujian@whamcloud.com>
Change-Id: I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/49043
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2022-11-04 06:35:58.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2022-11-04 06:37:28.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2022-11-04 06:39:06.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/90339/ : FAILURE

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2022-11-04 06:42:46.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (jenkins, 2022-11-04 09:06:26.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/90345/ : SUCCESS

--- Message (Shaun Tancheff, 2022-11-08 15:46:23.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2022-11-10 10:19:38.000000000) ---
Patch Set 1: Code-Review+1

This could be moved separate from the rest of the patch series to land earlier.

--- Message (Shaun Tancheff, 2022-12-02 19:23:13.000000000) ---
Patch Set 1:

Will need this RHEL 9.1 kernel. Maybe rebase to master to land earlier?

--- Message (Jian Yu, 2022-12-02 19:26:08.000000000) ---
Patch Set 1:

Sure, let me rebase it on master.

--- Message (Jian Yu, 2022-12-02 19:28:10.000000000) ---
Uploaded patch set 2: Patch Set 1 was rebased.

--- Message (wc-checkpatch, 2022-12-02 19:30:49.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2022-12-02 19:35:24.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (jenkins, 2022-12-02 20:16:54.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/90997/ : SUCCESS

--- Message (Autotest, 2022-12-04 01:31:25.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-5 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:26.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-zfs session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:27.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-2 session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:27.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-6 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:28.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting non-enforced review-dne-part-9 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:29.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-7 session on el8.5-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:30.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting non-enforced review-dne-part-8 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:30.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-3 session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:31.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-5 session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:31.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-1 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:32.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-4 session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:32.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-ldiskfs session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:33.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-ldiskfs session on el8.5-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:33.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-7 session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:34.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-6 session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:34.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-4 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:35.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-selinux-ssk-part-2 session on el8.5-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:36.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-selinux-ssk-part-1 session on el8.5-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:36.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-2 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:37.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-1 session on el8.5-x86_64/zfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Autotest, 2022-12-04 01:31:37.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-3 session on el8.6-x86_64/ldiskfs servers and clients for build 90997 patch 2. Requested by jianyu because of LU-12105.

--- Message (Oleg Drokin, 2022-12-13 16:07:33.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2022-12-13 16:07:40.000000000) ---
Change has been successfully cherry-picked as d1dbf26afd6676e02a2a00e635b9ad1fe14cf68e by Oleg Drokin
